@@ -388,6 +388,23 @@ class OldChangesList extends ChangesList {
  * Generate a list of changes using an Enhanced system (use javascript).
  */
 class EnhancedChangesList extends ChangesList {
+
+	/**
+	*  Add the JavaScript file for enhanced changeslist
+	*  @ return string
+	*/
+	public function beginRecentChangesList() {
+		global $wgStylePath, $wgStyleVersion;
+		$this->rc_cache = array();
+		$this->rcMoveIndex = 0;
+		$this->rcCacheIndex = 0;
+		$this->lastdate = '';
+		$this->rclistOpen = false;
+		$script = Xml::tags( 'script', array(
+			'type' => 'text/javascript',
+			'src' => $wgStylePath . "/common/enhancedchanges.js?$wgStyleVersion" ), '' );
+		return $script;
+	}
 	/**
 	 * Format a line for enhanced recentchange (aka with javascript and block of lines).
 	 */
@@ -596,13 +613,12 @@ class EnhancedChangesList extends ChangesList {
 
 		$users = ' <span class="changedby">[' . implode( $this->message['semicolon-separator'], $users ) . ']</span>';
 
-		# Arrow
-		$rci = 'RCI'.$this->rcCacheIndex;
-		$rcl = 'RCL'.$this->rcCacheIndex;
-		$rcm = 'RCM'.$this->rcCacheIndex;
-		$toggleLink = "javascript:toggleVisibility('$rci','$rcm','$rcl')";
-		$tl  = '<span id="'.$rcm.'"><a href="'.$toggleLink.'">' . $this->sideArrow() . '</a></span>';
-		$tl .= '<span id="'.$rcl.'" style="display:none"><a href="'.$toggleLink.'">' . $this->downArrow() . '</a></span>';
+		# ID for JS visibility toggle
+		$jsid = $this->rcCacheIndex;
+
+		$toggleLink = "onclick='toggleVisibility($jsid)'";
+		$tl  = "<span id='mw-rc-openarrow-$jsid' style='display:inline;' $toggleLink>" . $this->sideArrow() . "</span>";
+		$tl .= "<span id='mw-rc-closearrow-$jsid' style='display:none;' class='mw-rc-jshidden' $toggleLink>" . $this->downArrow() . "</span>";
 		$r .= '<td valign="top" style="white-space: nowrap"><tt>'.$tl.'&nbsp;';
 
 		# Main line
@@ -680,7 +696,7 @@ class EnhancedChangesList extends ChangesList {
 		$r .= "</td></tr></table>\n";
 
 		# Sub-entries
-		$r .= '<div id="'.$rci.'" style="display:none;"><table cellpadding="0" cellspacing="0"  border="0" style="background: none">';
+		$r .= '<div id="mw-rc-subentries-'.$jsid.'" class="mw-rc-jshidden"><table cellpadding="0" cellspacing="0"  border="0" style="background: none">';
 		foreach( $block as $rcObj ) {
 			# Get rc_xxxx variables
 			// FIXME: Would be good to replace this extract() call with something that explicitly initializes local variables.
